Styled sidebar (aligned icons, corrected icon size, aligned text, corrected width and colors, fixed tabs)

--- a/app/stylesheets/shared/sidebar.sass
+++ b/app/stylesheets/shared/sidebar.sass
@@ -14,7 +14,7 @@
   display: block
   height: 100%
   margin-top: 60px
-  z-index: 999
+  z-index: 800
   border: 1px solid #a4a295
   .red-button
     width: 235px
@@ -46,7 +46,7 @@
           font-weight: normal
           font-size: 14px
     #your-town
-      width: 90%
+      width: 265px
       margin: 0 auto
       padding: 15px 0px 0px 0px
       margin-bottom: -5px
@@ -61,6 +61,7 @@
         padding: 0px
         li
           padding: 7px 10px 10px 12px
+          border-radius: 5px
           &:hover, &:focus, &:active
             background-color: rgba(255, 255, 255, 0.4)
           a
@@ -74,11 +75,10 @@
             padding-left: 43px
             background: image-url("shared/redesign/sidebar-icon.png") no-repeat left
             background-size: 32px
+            text-shadow: 2px 2px 0px white
             line-height: 26px
             &:hover, &:focus, &:active
               color: $red
-              text-shadow: 2px 2px 0px white
-
           #request
             background: image-url("shared/redesign/request-offer-icon.png") no-repeat left
             background-size: 32px
@@ -107,7 +107,7 @@
     position: fixed
     display: block
     height: 100%
-    z-index: 999
+    z-index: 800
     padding-top: 15px
     .red-button
       width: 235px
@@ -139,7 +139,7 @@
           font-weight: normal
           font-size: 14px
     #your-town
-      width: 255px
+      width: 265px
       margin: 0 auto
       padding: 15px 0px 0px 0px
       margin-bottom: -4px
@@ -188,7 +188,7 @@
     #directories
       width: 270px
       margin: 0 
-        left: 20px
+        left: 15px
       h3
         display: inline-block
         font-family: $heading
@@ -202,7 +202,7 @@
         width: 115px
         text-align: center
         text-shadow: none
-        border: 1px solid #CAC8B8
+        border: 1px solid #D7D5C6
         border-bottom: 1px solid $light-tan
         box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 1.0)
         text-shadow: rgba(255, 255, 255, 0.75)
@@ -226,23 +226,23 @@
           line-height: 26px
 
   #directory_nav 
-    height: 58px
+    height: 57px
     cursor: pointer
     width: 270px
     h3.sidebar-links
       cursor: pointer
-      font-size: 20px
+      font-size: 18px
       &:hover
         background-color: $light-tan
     h3.sidebar-links.current_tab
       background-color: $light-tan
       color: $red
       position: relative
-      z-index: 999
+      z-index: 900
 
   #directory_content
     height: 100%
-    width: 238px
+    width: 248px
     background-color: #fdfaf4
     padding: 0px 10px 10px 10px
     position: relative
@@ -365,7 +365,7 @@
 
 
   #your-town
-    width: 90%
+    width: 265px
     margin: 0 auto
     padding: 15px 0px 0px 0px
     margin-bottom: -5px
@@ -379,9 +379,10 @@
     .your-town-links 
       padding: 0px
       li
-        padding: 13px 12px 10px 12px
+        padding: 13px 12px 10px 10px
         &:hover 
           background-color: rgba(255, 255, 255, 0.4)
+          border-radius: 5px
         a
           text-decoration: none
           font-family: $heading
@@ -391,33 +392,33 @@
           font-weight: bold
           padding-top: 10px
           padding-bottom: 8px
-          padding-left: 49px
+          padding-left: 44px
           background: no-repeat left
           background-size: 32px
           line-height: 26px
+          text-shadow: 1px 1px 0px white          
           &:hover, &:focus, &:active
             color: $red
-            text-shadow: 2px 2px 0px white
 
         #request
           background-image: image-url("shared/redesign/request-offer-icon.png") 
-          background-size: 34px
+          background-size: 32px
 
         #marketplace
           background-image: image-url("shared/redesign/marketplace-icon.png") 
-          background-size: 34px
+          background-size: 32px
 
         #event
           background-image: image-url("shared/redesign/events-icon.png") 
-          background-size: 34px
+          background-size: 32px
 
         #discussion
           background-image: image-url("shared/redesign/discussions-icon.png") 
-          background-size: 34px
+          background-size: 32px
 
         #announcement
           background-image: image-url("shared/redesign/announcements-icon.png")       
-          background-size: 34px
+          background-size: 32px
 
         
 
